--- a/www/edit.html
+++ b/www/edit.html
@@ -33,7 +33,7 @@
                 <button style="border-color: pink !important; background-color: rgba(0,0,0,.75);" type="button" onclick="state.love()"
                     class="btn btn-outline-success mx-auto">Love</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.hate()"
-                    class="btn btn-outline-warning mx-auto">Hate</button>
+                    class="btn btn-outline-danger mx-auto">Hate</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
                     class="owned-content logged_in_content btn btn-outline-success mx-auto">Save</button>
             </h1>
