--- a/www/index.html
+++ b/www/index.html
@@ -1600,22 +1600,22 @@
                     })(context_identifier));
 
                 if (context.width.type == OpenGLDimension.Type.SCREEN_SIZE)
-                    $("#" + context_identifier + '_width_screen_size').prop("checked", true).click();
+                    $("#" + context_identifier + '_width_screen_size').prop("checked", true);
                 if (context.width.type == OpenGLDimension.Type.NEXT_LOWEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_width_next_lowest_power_of_two').prop("checked", true).click();
+                    $("#" + context_identifier + '_width_next_lowest_power_of_two').prop("checked", true);
                 if (context.width.type == OpenGLDimension.Type.NEXT_HIGHEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_width_next_highest_power_of_two').prop("checked", true).click();
+                    $("#" + context_identifier + '_width_next_highest_power_of_two').prop("checked", true);
                 if (context.width.type == OpenGLDimension.Type.EXACT)
-                    $("#" + context_identifier + '_width_exact').prop("checked", true).click();
+                    $("#" + context_identifier + '_width_exact').prop("checked", true);
 
                 if (context.height.type == OpenGLDimension.Type.SCREEN_SIZE)
-                    $("#" + context_identifier + '_height_screen_size').prop("checked", true).click();
+                    $("#" + context_identifier + '_height_screen_size').prop("checked", true);
                 if (context.height.type == OpenGLDimension.Type.NEXT_LOWEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_height_next_lowest_power_of_two').prop("checked", true).click();
+                    $("#" + context_identifier + '_height_next_lowest_power_of_two').prop("checked", true);
                 if (context.height.type == OpenGLDimension.Type.NEXT_HIGHEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_height_next_highest_power_of_two').prop("checked", true).click();
+                    $("#" + context_identifier + '_height_next_highest_power_of_two').prop("checked", true);
                 if (context.height.type == OpenGLDimension.Type.EXACT)
-                    $("#" + context_identifier + '_height_exact').prop("checked", true).click();
+                    $("#" + context_identifier + '_height_exact').prop("checked", true);
             }
         }
 
@@ -2666,21 +2666,21 @@
                 this.stage_codemirrors[i].push(vertices_editor);
 
                 if (stage.type == OpenGLStage.Type.SHADER)
-                    $("#" + stage_identifier + '_stage_shader').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_shader').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_POINTS)
-                    $("#" + stage_identifier + '_stage_mesh_points').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_points').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_LINES)
-                    $("#" + stage_identifier + '_stage_mesh_lines').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_lines').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_LINE_STRIP)
-                    $("#" + stage_identifier + '_stage_mesh_line_strip').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_line_strip').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_LINE_LOOP)
-                    $("#" + stage_identifier + '_stage_mesh_line_loop').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_line_loop').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_TRIANGLES)
-                    $("#" + stage_identifier + '_stage_mesh_triangles').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_triangles').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_TRIANGLE_FAN)
-                    $("#" + stage_identifier + '_stage_mesh_triangle_fan').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_triangle_fan').prop("checked", true);
                 if (stage.type == OpenGLStage.Type.MESH_TRIANGLE_STRIP)
-                    $("#" + stage_identifier + '_stage_mesh_triangle_strip').prop("checked", true).click();
+                    $("#" + stage_identifier + '_stage_mesh_triangle_strip').prop("checked", true);
             }
         }
         GlobalState.prototype.get_ui_algorithm = function () {
@@ -2718,7 +2718,7 @@
             $(window.location.hash + "_algorithm_description").val(algorithm.description);
 
             if (algorithm.public)
-                $(window.location.hash + "_algorithm_public_checkbox").prop("checked", true).click();
+                $(window.location.hash + "_algorithm_public_checkbox").prop("checked", true);
             else
                 $(window.location.hash + "_algorithm_public_checkbox").prop("checked", false).click();
 
