--- a/www/index.html
+++ b/www/index.html
@@ -1298,13 +1298,13 @@
                             total_mutex = (!$("#" + mutex_these[j]).prop("checked")) && total_mutex;
 
                         if (total_mutex) {
-                            $("#" + skipped_checkbox).prop("checked", false).click();
+                            $("#" + skipped_checkbox).prop("checked", true);
                         }
                         else {
                             for (var j = 0; j < checkboxes.length; j++) {
                                 if (j == i)
                                     continue;
-                                $("#" + checkboxes[j]).prop("checked", false)
+                                $("#" + checkboxes[j]).prop("checked", false);
                             }
                         }
                         if (global_change)
