--- a/www/canvas.html
+++ b/www/canvas.html
@@ -79,7 +79,7 @@
       // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
       // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
       OpenGLStageTypes = this.protocol.lookupType("messages.OpenGLStage").Type;
-      // OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
+      OpenGLPipelineMessage = this.protocol.lookupType("messages.OpenGLPipeline");
       // AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
       AlgorithmMessage = this.protocol.lookupType("messages.Algorithm");
       // Custom = this.protocol.lookupType("messages.Custom");
